# hurlurl

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
.github/workflows/: aws.yml  gcp.yml
migrations/2022-07-22-192243_links/: down.sql  up.sql
shared/: Cargo.toml
shared/src/: lib.rs  schema.rs
src/: db.rs  main.rs
urllb/: Cargo.toml  diesel.toml
urllb/migrations/2024-04-01-120918_fraud/: down.sql  up.sql
urllb/migrations/2024-07-02-221141_add_payment/: down.sql  up.sql
urllb/src/: blacklist.txt  db.rs  error.rs  main.rs  models.rs  schema.rs  service.rs  stats.rs  whitelist.txt
web/: Cargo.toml  Trunk.toml  index.html  output.css  styles.scss
web/.cargo/: config
web/src/: form.rs  header.rs  home.rs  imprint.rs  info.rs  main.rs  permanent_redirect_checkbox.rs  total_stats.rs  use_fetch.rs
