[package]
name = "urllb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
serde = "1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
diesel_migrations = "2.0.0-rc.1"
diesel = { version = "2.0.0-rc.1", features = ["postgres"]}
diesel-async = {git = "https://github.com/weiznich/diesel_async"}
dotenv = "0.15"
rand = "0.8"
nanoid = "0.4"
