[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
serde = { version = "1", features = ["serde_derive"] }
diesel = { version = "2.0.0-rc.1", optional = true }
