[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
serde = { version = "1", features = ["serde_derive"] }
diesel = { version = "2.0.4", optional = true, features = ["network-address", "ipnet-address"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
validator = { version = "0.16", features = ["derive"] }
ipnet = "2"