[package]
name = "urllb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tower = "0.4"
tower-http = { version = "0.3", features = ["cors"] }
serde = "1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-postgres = "0.7"
postgres-native-tls = "0.5"
native-tls = "0.2"
tracing = "0.1"
diesel_migrations = "2"
diesel = { version = "2", features = ["postgres"] }
diesel-async = { version = "0.1", features = ["tokio-postgres", "postgres", "tokio"] }
dotenv = "0.15"
rand = "0.8"
nanoid = "0.4"
include_dir = "0.7"
mime_guess = "2"
validator = "0.15"

cached = "0.40"
anyhow = "1"

shared = { path = "../shared", features = ["diesel"] }
