[package]
name = "urllb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
axum-client-ip = "0.4"
tower-http = { version = "0.3", features = ["cors", "fs", "compression-gzip"] }
serde = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13.0"
rustls = "0.23.8"
webpki-roots = "1.0.2"
tracing = "0.1"
diesel_migrations = "2"
diesel = { version = "2.0.4", features = ["postgres"] }
diesel-async = { version = "0.6.1", features = ["tokio-postgres", "postgres", "tokio", "bb8", "async-connection-wrapper"] }
ipnet = "2"
bb8 = "0.9.0"
rand = "0.8"
nanoid = "0.4"
include_dir = "0.7"
mime_guess = "2"
validator = "0.16"
futures-util = "0.3"

cached = "0.43"
anyhow = "1"
lazy_static = "1.4.0"
envy = "0.4"
dotenvy = "0.15"

shared = { path = "../shared", features = ["diesel"] }

async-stripe = { version = "0.37", features = ["runtime-tokio-hyper-rustls-webpki"] }
thiserror = "1"
