[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.19" }
yew-router = "0.16"
yew-hooks = { version = "0.1" }
material-yew = { version = "0.2", features = ["full"] }
web-sys = "0.3"
wasm-logger = "0.2"
log = "0.4"

gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"

shared = { path = "../shared" }
